defect#133297 Update versions to 3.3 and 1.3 and make dependencies require same build version
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5643 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/gaim-ifolder/package/gaim-ifolder.spec.in
+++ b/gaim-ifolder/package/gaim-ifolder.spec.in
@@ -36,7 +36,7 @@ Vendor       : <unknown>
 Packager     : <unknown>
 BuildRoot    : %{_tmppath}/%{name}-%{version}
 
-Requires     : simias >= 1.0
+Requires     : simias >= @SIMIASVER@
 Obsoletes    : %{name} < %{version}
 
 #=============================================================================
