--- a/nautilus-ifolder/configure.in
+++ b/nautilus-ifolder/configure.in
@@ -6,7 +6,9 @@ AC_SUBST(PACKAGE)
 AM_INIT_AUTOMAKE($PACKAGE, 3.3)
 let "BUILDNUM=`date +%G%j`-2000000"
 VERSION=$VERSION.$BUILDNUM.1
+SIMIASVER=1.3.$BUILDNUM.1
 AC_SUBST(VERSION)
+AC_SUBST(SIMIASVER)
 AM_CONFIG_HEADER(config.h)
 
 NAUTILUS_MINIMUM_VERSION=2.5.0
