--- a/gaim-ifolder/configure.in
+++ b/gaim-ifolder/configure.in
@@ -2,8 +2,9 @@ AC_INIT(src/GaimDomain/GaimDomain.cs)
 AC_CANONICAL_SYSTEM
 AM_CONFIG_HEADER(config.h)
 
-AM_INIT_AUTOMAKE(gaim-ifolder, 0.1)
+AM_INIT_AUTOMAKE(gaim-ifolder, 0.3)
 VERSION=$VERSION.`date +%Y%m%d`
+SIMIASVER=1.3.`date +%Y%m%d`
 AM_MAINTAINER_MODE
 AC_PROG_CC
 
@@ -35,6 +36,7 @@ case $host_os in
     ;;
 esac
 AC_SUBST(SIMIAS_OS)
+AC_SUBST(SIMIASVER)
 AM_CONDITIONAL(LINUX, test "$SIMIAS_OS" = "linux")
 AM_CONDITIONAL(WINDOWS, test "$SIMIAS_OS" = "windows")
 AM_CONDITIONAL(DARWIN, test "$SIMIAS_OS" = "darwin")
