--- a/gnome-vfs-ifolder/package/gnome-vfs-ifolder.spec.in
+++ b/gnome-vfs-ifolder/package/gnome-vfs-ifolder.spec.in
@@ -36,7 +36,7 @@ Vendor       : <unknown>
 Packager     : <unknown>
 BuildRoot    : %{_tmppath}/%{name}-%{version}
 
-Requires     : ifolder3 >= 3.1
+Requires     : ifolder3 >= @VERSION@ 
 Requires     : gnome-vfs2 >= 2.10
 Obsoletes    : %{name} <= %{version}
 
