--- a/ifolder/configure.in
+++ b/ifolder/configure.in
@@ -6,6 +6,7 @@ m4_pattern_allow(PKG_CONFIG)
 AM_INIT_AUTOMAKE(ifolder3, 3.3)
 let "BUILDNUM=`date +%G%j`-2000000"
 VERSION=$VERSION.$BUILDNUM.1
+SIMIASVER=1.3.$BUILDNUM.1
 AM_MAINTAINER_MODE
 AC_PROG_CC
 
@@ -37,6 +38,7 @@ case $host_os in
     ;;
 esac
 AC_SUBST(IFOLDER_OS)
+AC_SUBST(SIMIASVER)
 AM_CONDITIONAL(LINUX, test "$IFOLDER_OS" = "linux")
 AM_CONDITIONAL(WINDOWS, test "$IFOLDER_OS" = "windows")
 AM_CONDITIONAL(DARWIN, test "$IFOLDER_OS" = "darwin")
