updated to be consistent with Open Desktop standards
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/R3OESSP2RC1_BR@5648 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/LinuxClient/application/ifolder.desktop.in
+++ b/ifolder/src/LinuxClient/application/ifolder.desktop.in
@@ -1,4 +1,5 @@
 [Desktop Entry]
+X-SuSE-translate=false
 Name=iFolder 3
 GenericName=iFolder 3
 Comment=iFolder Collaborative File Sharing Tool
@@ -7,4 +8,4 @@ Icon=@_datadir_@/ifolder3/images/ifolder24.png
 StartupNotify=false
 Terminal=false
 Type=Application
-Categories=X-Ximian-Main;Application;Internet;
+Categories=GNOME;Network;FileTransfer;
