commited the change so the package is now called simias-bonjour as it is when we distributed it
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/R3OESSP2RC1_BR@5649 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/bonjour/configure.in
+++ b/bonjour/configure.in
@@ -2,7 +2,7 @@ AC_INIT(src/Bonjour/Domain.cs)
 AC_CANONICAL_SYSTEM
 AM_CONFIG_HEADER(config.h)
 
-AM_INIT_AUTOMAKE(bonjour, 0.2)
+AM_INIT_AUTOMAKE(simias-bonjour, 1.1)
 VERSION=$VERSION.`date +%Y%m%d`
 AM_MAINTAINER_MODE
 AC_PROG_CC
