--- a/simias/SimiasLib.csproj
+++ b/simias/SimiasLib.csproj
@@ -105,14 +105,14 @@
                     HintPath = "..\..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.Runtime.Remoting.dll"
                 />
                 <Reference
-                    Name = "Novell.Security.ClientPasswordManager.NetCredential"
-                    AssemblyName = "Novell.Security.ClientPasswordManager.NetCredential"
-                    HintPath = "external\Novell.Security\net\bin\Novell.Security.ClientPasswordManager.NetCredential.dll"
-                />
-                <Reference
                     Name = "SimiasClient"
                     AssemblyName = "SimiasClient"
                     HintPath = "src\SimiasClient\bin\Debug\SimiasClient.dll"
+                />
+                <Reference
+                    Name = "Novell.Security.ClientPasswordManager.NetCredential"
+                    AssemblyName = "Novell.Security.ClientPasswordManager.NetCredential"
+                    HintPath = "external\NS\net\Novell.Security.ClientPasswordManager.NetCredential.dll"
                 />
             </References>
         </Build>
