--- a/simias/src/WebService/SimiasWebService.csproj
+++ b/simias/src/WebService/SimiasWebService.csproj
@@ -110,6 +110,7 @@
             <Include>
                 <File
                     RelPath = "AssemblyInfo.cs"
+                    SubType = "Code"
                     BuildAction = "Compile"
                 />
                 <File
