--- a/SimiasLib.csproj
+++ b/SimiasLib.csproj
@@ -174,6 +174,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "src\CollectionStore\HostNode.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "src\CollectionStore\ICSEnumerator.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
