Updated Makefile to clean out .svn and CVS directories when making the dist tarball
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/R3OESSP2RC1_BR/simias@5690 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,6 +4,11 @@ DIST_SUBDIRS = $(SUBDIRS) doc package test other
 
 PROJECT_FILES = $(srcdir)/Simias.sln $(srcdir)/Simias.csproj
 
+# remove all of the CVS directories
+dist-hook:
+	rm -rf `find $(distdir) -name CVS`
+	rm -rf `find $(distdir) -name ".svn"`
+
 EXTRA_DIST = tools/gsoap external/NS external/flaim external/log4net $(srcdir)/$(PACKAGE)*.pc.in $(PROJECT_FILES)
 
 all: simias.pc simias-client.pc simias-client-c.pc
