--- a/simias/Makefile.am
+++ b/simias/Makefile.am
@@ -4,6 +4,11 @@ DIST_SUBDIRS = $(SUBDIRS) doc package test other
 
 PROJECT_FILES = $(srcdir)/Simias.sln $(srcdir)/Simias.csproj
 
+# remove all of the CVS directories
+dist-hook:
+	rm -rf `find $(distdir) -name CVS`
+	rm -rf `find $(distdir) -name ".svn"`
+
 EXTRA_DIST = tools/gsoap external/NS external/flaim external/log4net $(srcdir)/$(PACKAGE)*.pc.in $(PROJECT_FILES)
 
 all: simias.pc simias-client.pc simias-client-c.pc
