1. Added methods to retrieve the journal entries for a collection and for a file. 2. Added journal methods to the DomainProvider interface.
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/Journaling@5703 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/Simias.csproj
+++ b/simias/Simias.csproj
@@ -184,7 +184,7 @@
                     BuildAction = "Compile"
                 />
                 <File
-                    RelPath = "src\CollectionStore\Journal.cs"
+                    RelPath = "src\CollectionStore\JournalEntry.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
