--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,12 @@ DIST_SUBDIRS = $(SUBDIRS) doc package test
 
 PROJECT_FILES = $(srcdir)/SimiasLib.sln $(srcdir)/SimiasLib.csproj
 
-EXTRA_DIST = tools/gsoap external/NS external/flaim external/log4net $(srcdir)/$(PACKAGE)*.pc.in $(PROJECT_FILES)
+# remove all of the CVS directories
+dist-hook:
+	rm -rf `find $(distdir) -name CVS`
+	rm -rf `find $(distdir) -name ".svn"`
+
+EXTRA_DIST = tools/gsoap external/flaim external/log4net $(srcdir)/$(PACKAGE)*.pc.in $(PROJECT_FILES)
 
 all: simias.pc simias-client.pc simias-client-c.pc
 
