--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,10 @@
 AC_INIT(src/Common/Configuration.cs)
 AC_CANONICAL_SYSTEM
-AM_INIT_AUTOMAKE(simias, 1.3)
-let "BUILDNUM=`date +%G%j`-2000000"
+AM_INIT_AUTOMAKE(simias, 1.5)
+# Check to see if the BUILDNUM is set by global build
+if test "$BUILDNUM" = ""; then
+	let "BUILDNUM=`date +%G%j`-2000000"
+fi
 VERSION=$VERSION.$BUILDNUM.1
 AM_MAINTAINER_MODE
 AC_PROG_CC
