--- a/bonjour/configure.in
+++ b/bonjour/configure.in
@@ -1,9 +1,14 @@
 AC_INIT(src/Bonjour/Domain.cs)
 AC_CANONICAL_SYSTEM
 AM_CONFIG_HEADER(config.h)
+AM_INIT_AUTOMAKE(simias-bonjour, 1.5)
 
-AM_INIT_AUTOMAKE(simias-bonjour, 1.3)
-VERSION=$VERSION.`date +%Y%m%d`
+# Check to see if the BUILDNUM is set by global build
+if test "$BUILDNUM" = ""; then
+	let "BUILDNUM=`date +%G%j`-2000000"
+fi
+
+VERSION=$VERSION.$BUILDNUM.1
 AM_MAINTAINER_MODE
 AC_PROG_CC
 
