--- a/src/SimiasLib.dll/Makefile.am
+++ b/src/SimiasLib.dll/Makefile.am
@@ -7,7 +7,11 @@ SIMIAS_CSFILES_CSC := $(subst /,$(SEP),$(SIMIAS_CSFILES_SRC))
 SIMIAS_INCLUDES =
 SIMIAS_RESOURCES =
 SIMIAS_FLAGS = $(CSC_LIBFLAG) /unsafe
+if LINUX
+SIMIAS_LIBS1 = System.dll System.Data.dll $(SYSTEM_XML) System.Security.dll System.Runtime.Remoting.dll System.Web.dll System.Web.Services.dll SimiasClient.dll
+else
 SIMIAS_LIBS1 = System.dll System.Data.dll $(SYSTEM_XML) System.Security.dll System.Runtime.Remoting.dll System.Web.dll System.Web.Services.dll SimiasClient.dll log4net.dll 
+endif
 SIMIAS_LIBPATH = $(LOG4NET_DIR) ../SimiasClient
 
 if !WINDOWS
@@ -37,7 +41,7 @@ CUR_DIR := $(shell pwd)
 all: SimiasLib.dll ../Common/Simias.config
 
 SimiasLib.dll: AssemblyInfo.cs $(SIMIAS_CSFILES_SRC) ../Common/MyDns.cs $(SIMIAS_RESOURCES) $(srcdir)/SimiasLib.dll.sources
-	$(CSC) /out:$@ $(CSCFLAGS) $(SIMIAS_FLAGS) $(SIMIAS_LIBS:%=/r:%) $(SIMIAS_LIBPATH:%=/lib:%) $(SIMIAS_CSFILES_CSC) $(subst /,$(SEP),../Common/MyDns.cs) $(DOC_FILE_CMD)
+	$(CSC) /out:$@ $(CSCFLAGS) $(SIMIAS_FLAGS) $(SIMIAS_LIBS:%=/r:%) $(SIMIAS_LIBPATH:%=/lib:%) $(LOG4NET_LIBS) $(SIMIAS_CSFILES_CSC) $(subst /,$(SEP),../Common/MyDns.cs) $(DOC_FILE_CMD)
 
 AssemblyInfo.cs: $(srcdir)/AssemblyInfo.cs.in Makefile
 	sed -e 's,@_VERSION_@,@VERSION@,g' $< > $@
@@ -53,8 +57,10 @@ install-exec-local: all
 	$(mkinstalldirs) $(DESTDIR)$(webbindir) $(DESTDIR)$(modulesdir) $(DESTDIR)$(sysconfdir) $(DESTDIR)$(datadir)/simias
 	$(INSTALL_PROGRAM) SimiasLib.dll $(DEBUG_FILES) $(DESTDIR)$(webbindir)
 	$(INSTALL_PROGRAM) SimiasLib.conf $(DESTDIR)$(modulesdir)
+if !LINUX
 	$(INSTALL_PROGRAM) $(srcdir)/$(LOG4NET_DIR)/log4net.dll $(DESTDIR)$(webbindir)
 	cp -f $(srcdir)/$(LOG4NET_DIR)/../../../../LICENSE.txt $(DESTDIR)$(datadir)/simias/log4net.LICENSE.txt
+endif	
 	$(INSTALL_PROGRAM) ../Common/Simias.log4net $(DESTDIR)$(sysconfdir)
 	$(INSTALL_PROGRAM) ../Common/Simias.config $(DESTDIR)$(sysconfdir)
 	$(INSTALL_PROGRAM) ../Login/Login.ashx $(DESTDIR)$(webdir)
@@ -64,10 +70,12 @@ endif
 
 uninstall-local:
 	cd $(DESTDIR)$(webdir); rm -rf $(modulesdir)
+if !LINUX
 	cd $(DESTDIR)$(webbindir); rm -f log4net.dll
+	cd $(DESTDIR)$(datadir)/simias; rm -f log4net.LICENSE.txt
+endif
 	cd $(DESTDIR)$(webbindir); rm -f SimiasLib.dll $(DEBUG_FILES)
 	cd $(DESTDIR)$(sysconfdir); rm -f Simias.log4net Simias.config
-	cd $(DESTDIR)$(datadir)/simias; rm -f log4net.LICENSE.txt
 if LINUX
 	cd $(DESTDIR)$(webbindir); rm -f SimiasLib.dll.config
 endif
