Removed dependency on log4net in the external directory for Linux and added the requirement of having log4net installed on Linux
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5731 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/api/libsimias/Makefile.am
+++ b/simias/src/api/libsimias/Makefile.am
@@ -23,11 +23,11 @@ libsimias2_la_CFLAGS = \
 libsimias2_la_LDFLAGS = \
 	$(XML2_LIBS)
 
-if LINUX
-bin_PROGRAMS = testapi
-testapi_SOURCES = test.c
-LDADD = libsimias2.la
-endif
+#if LINUX
+#bin_PROGRAMS = testapi
+#testapi_SOURCES = test.c
+#LDADD = libsimias2.la
+#endif
 
 envC.c: $(srcdir)/stdsoap2.c
 	> $(srcdir)/env.h
