Updated a call to be able to read the xsp port file (XML) now that the new architecture in Simias is in place.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5737 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/libsimias/Makefile.am
+++ b/simias/src/libsimias/Makefile.am
@@ -17,7 +17,10 @@ libsimias_la_SOURCES = \
  	envC.c simiasClientLib.c stdsoap2.c simias.c simias.h simiasweb.c simiasweb.h
  	
 libsimias_la_CFLAGS = \
-	-DWITH_NONAMESPACES -DWITH_COOKIES
+	$(XML2_CFLAGS) -DWITH_NONAMESPACES -DWITH_COOKIES
+
+libsimias_la_LDFLAGS = \
+	$(XML2_LIBS)
 
 envC.c: $(srcdir)/stdsoap2.c
 	> $(srcdir)/env.h
