Cleaned up error in creating directory in Bonour
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/ifolder_3_4@5752 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/bonjour/src/Bonjour/Makefile.am
+++ b/bonjour/src/Bonjour/Makefile.am
@@ -34,6 +34,7 @@ endif
 
 install-exec-local: Simias.Bonjour.dll $(DATA_FILES)
 	$(mkinstalldirs) $(DESTDIR)$(webdir)
+	$(mkinstalldirs) $(DESTDIR)$(webdir)/modules
 	$(mkinstalldirs) $(DESTDIR)$(webbindir)
 	$(INSTALL_PROGRAM) Simias.Bonjour.dll $(OTHER_FILES) $(DEBUG_FILES) $(DESTDIR)$(webbindir)
 	$(INSTALL_PROGRAM) Simias.Bonjour.conf $(DESTDIR)$(webdir)/modules
