updated Makefile to remove the .la and .a files
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/ifolder_3_4@5756 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/FlaimProvider/FlaimWrapper/Makefile.am
+++ b/simias/src/FlaimProvider/FlaimWrapper/Makefile.am
@@ -89,6 +89,10 @@ libFlaimWrapper_la_CXXFLAGS = -I "../../../external/flaim/include" -fshort-wchar
 
 libFlaimWrapper_la_LDFLAGS = -L"../../../external/flaim/lxx86/gcc3/release" -lflm
 
+install-exec-hook:
+	rm -f $(DESTDIR)$(libdir)/libFlaimWrapper.a
+	rm -f $(DESTDIR)$(libdir)/libFlaimWrapper.la
+
 install-exec-local: libFlaimWrapper.la
 	$(mkinstalldirs) $(DESTDIR)$(webbindir)
 	if test -e $(DESTDIR)$(webbindir)/FlaimWrapper$(SHARED_LIB_EXT); then \
