--- a/simias/src/libsimias/Makefile.am
+++ b/simias/src/libsimias/Makefile.am
@@ -35,7 +35,13 @@ $(srcdir)/libsimias.h: $(srcdir)/stdsoap2.c $(SIMIAS_WSDL)
 
 $(srcdir)/simiasClientLib.c: $(srcdir)/libsimias.h
 	$(GSOAP_PATH)/soapcpp2 -c -n -psimias $(srcdir)/libsimias.h
-	
+
+install-exec-hook:
+if LINUX
+	rm -f $(DESTDIR)$(libdir)/libsimias.a
+	rm -f $(DESTDIR)$(libdir)/libsimias.la
+endif
+
 install-exec-local:
 	$(mkinstalldirs) $(DESTDIR)$(includedir)
 	$(INSTALL_PROGRAM) simiasStub.h $(DESTDIR)$(includedir)/simias
