removed the .a and .la files from install
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/ifolder_3_4@5758 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/SimiasClient/libsimias-event/Makefile.am
+++ b/simias/src/SimiasClient/libsimias-event/Makefile.am
@@ -17,6 +17,12 @@ libsimias_event_la_CFLAGS = \
 	$(XML2_CFLAGS)
 endif
 
+install-exec-hook:
+if LINUX
+	rm -f $(DESTDIR)$(libdir)/libsimias-event.a
+	rm -f $(DESTDIR)$(libdir)/libsimias-event.la
+endif
+
 libsimias_event_la_LDFLAGS = \
 	$(XML2_LIBS)
 
