Updated makefiles to remove the .a and .la files from the libraries on OS X and Linux
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/ifolder_3_4@5762 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/SimiasClient/libsimias-event/Makefile.am
+++ b/simias/src/SimiasClient/libsimias-event/Makefile.am
@@ -17,8 +17,8 @@ libsimias_event_la_CFLAGS = \
 	$(XML2_CFLAGS)
 endif
 
+if !WINDOWS
 install-exec-hook:
-if LINUX
 	rm -f $(DESTDIR)$(libdir)/libsimias-event.a
 	rm -f $(DESTDIR)$(libdir)/libsimias-event.la
 endif
