Added hook to remove the .a and .la files
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/ifolder_3_4@5763 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/bonjour/src/libsimiasbonjour/Makefile.am
+++ b/bonjour/src/libsimiasbonjour/Makefile.am
@@ -1,6 +1,5 @@
 EXTRA_DIST = external
 
-
 libdir=${webbindir}
 
 lib_LTLIBRARIES = libsimiasbonjour.la
@@ -19,6 +18,12 @@ endif
 
 #libsimias_la_CFLAGS = \
 #	-I$(top_srcdir)
+
+install-exec-hook:
+if !WINDOWS
+	rm -f $(DESTDIR)$(libdir)/libsimiasbonjour.a
+	rm -f $(DESTDIR)$(libdir)/libsimiasbonjour.la
+endif
 
 clean-local:
 	rm -rf $(COMMON_CLEAN_FILES)
