Updated build to remove .a and .la files and also to inlude the new api stuff
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5766 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/FlaimProvider/FlaimWrapper/Makefile.am
+++ b/simias/src/FlaimProvider/FlaimWrapper/Makefile.am
@@ -118,5 +118,9 @@ uninstall-local:
 
 endif
 
+install-exec-hook:
+	rm -f $(DESTDIR)$(libdir)/libFlaimWrapper.a
+	rm -f $(DESTDIR)$(libdir)/libFlaimWrapper.la
+
 endif
 	
