Updated build to remove .a and .la files and also to inlude the new api stuff
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@5766 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/configure.in
+++ b/configure.in
@@ -499,6 +499,7 @@ src/SqliteProvider/Makefile
 src/libsimias/Makefile
 src/api/Makefile
 src/api/libsimias/Makefile
+src/api/libsimias/simias2-c.pc
 src/api/WebService/Makefile
 src/api/WebService/AssemblyInfo.cs
 test/Makefile
