--- a/src/FlaimProvider/FlaimWrapper/Makefile.am
+++ b/src/FlaimProvider/FlaimWrapper/Makefile.am
@@ -118,5 +118,9 @@ uninstall-local:
 
 endif
 
+install-exec-hook:
+	rm -f $(DESTDIR)$(libdir)/libFlaimWrapper.a
+	rm -f $(DESTDIR)$(libdir)/libFlaimWrapper.la
+
 endif
 	
