--- a/src/libsimias/Makefile.am
+++ b/src/libsimias/Makefile.am
@@ -35,6 +35,12 @@ $(srcdir)/libsimias.h: $(srcdir)/stdsoap2.c $(SIMIAS_WSDL)
 
 $(srcdir)/simiasClientLib.c: $(srcdir)/libsimias.h
 	$(GSOAP_PATH)/soapcpp2 -c -n -psimias $(srcdir)/libsimias.h
+
+install-exec-hook:
+if !WINDOWS
+	rm -f $(DESTDIR)$(libdir)/libsimias.a
+	rm -f $(DESTDIR)$(libdir)/libsimias.la
+endif
 	
 install-exec-local:
 	$(mkinstalldirs) $(DESTDIR)$(includedir)
