Changed "Copyright" to "License" since "License" is deprecated and no longer works in NLD 10 with the newer version of rpmbuild.
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/ifolder_3_4@5784 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/package/linux/simias.spec.in
+++ b/simias/package/linux/simias.spec.in
@@ -27,7 +27,7 @@ Summary      : Simias
 Name         : @PACKAGE@
 Version      : @VERSION@
 Release      : 1
-Copyright    : GPL
+License      : GPL
 Group        : Applications/Productivity
 Source       : %{name}-%{version}.tar.gz
 URL          : http://forge.novell.com/modules/xfmod/project/?ifolder
