changes to not look specifically for the SimpleServer domain
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5794 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias-server/src/Simias.config.in
+++ b/simias-server/src/Simias.config.in
@@ -1,8 +1,8 @@
 <configuration>
   <section name="Domain">
     <setting name="ServerName" value="Simias Server" />
-    <setting name="AdminName" value="admin" />
-    <setting name="AdminPassword" value="simias" />
+    <setting name="AdminName" value="SimiasAdmin" />
+    <setting name="AdminPassword" value="root" />
   </section>
   <section name="Authentication">
 	<setting name="SimiasAuthNotRequired" value="Login.ashx, Simias.asmx:PingSimias, DomainService.asmx:GetDomainID" />
