forgot to copy the .conf file
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5801 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias-server/src/MdbSync/Makefile.am
+++ b/simias-server/src/MdbSync/Makefile.am
@@ -39,9 +39,11 @@ endif
 install-exec-local: Simias.MdbSync.dll $(DATA_FILES)
 	$(mkinstalldirs) $(DESTDIR)$(webbindir) $(DESTDIR)$(bindir)
 	$(INSTALL_PROGRAM) Simias.MdbSync.dll $(DEBUG_FILES) $(DESTDIR)$(webbindir)
+	$(INSTALL_PROGRAM) Simias.MdbSync.conf $(DESTDIR)$(webdir)/modules
 	
 uninstall-local:
 	cd $(DESTDIR)$(webbindir); rm -f Simias.MdbSync.dll $(DEBUG_FILES)
+	cd $(DESTDIR)$(webdir)/modules; rm -f Simias.MdbSync.conf
 	
 installcheck-local: install
 	
