--- a/simias/SimiasLib.csproj
+++ b/simias/SimiasLib.csproj
@@ -414,6 +414,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "src\Journal\Journal.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "src\Login\Login.ashx"
                     BuildAction = "None"
                 />
