1. Don't allow journal nodes to be modified from the client side. 2. Don't allow journal nodes to be deleted.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@5810 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/SimiasLib.csproj
+++ b/SimiasLib.csproj
@@ -414,6 +414,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "src\Journal\Journal.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "src\Login\Login.ashx"
                     BuildAction = "None"
                 />
