--- a/Simias.Rss/Simias.Rss.csproj
+++ b/Simias.Rss/Simias.Rss.csproj
@@ -76,7 +76,7 @@
                 />
                 <Reference
                     Name = "System.XML"
-                    AssemblyName = "System.XML"
+                    AssemblyName = "System.Xml"
                     HintPath = "..\..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.XML.dll"
                 />
                 <Reference
@@ -104,6 +104,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Item.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "rss.ashx"
                     BuildAction = "None"
                 />
@@ -114,6 +119,11 @@
                 />
                 <File
                     RelPath = "RssHeaders.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "Util.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
