--- a/Simias.Rss/Simias.Rss.csproj
+++ b/Simias.Rss/Simias.Rss.csproj
@@ -89,6 +89,11 @@
                     AssemblyName = "System.Web"
                     HintPath = "..\..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.Web.dll"
                 />
+                <Reference
+                    Name = "Simias.HttpFile"
+                    AssemblyName = "Simias.HttpFile"
+                    HintPath = "..\Simias.HttpFile\bin\Debug\Simias.HttpFile.dll"
+                />
             </References>
         </Build>
         <Files>
