adding sync provider framework
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5820 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias-server/src/Simias.config.in
+++ b/simias-server/src/Simias.config.in
@@ -9,7 +9,7 @@
 	<setting name="SimiasRequireSSL" value="no" />
   </section>
   <section name="StoreProvider">
-    <setting name="Assembly" value="@_StoreProviderAssembly_@" />
+    <setting name="Assembly" value="SimiasLib.dll" />
     <setting name="Type" value="@_StoreProviderType_@" />
   </section>
 </configuration>
