--- a/simias/package/darwin/Makefile.am
+++ b/simias/package/darwin/Makefile.am
@@ -39,7 +39,7 @@ simias-dist:
 	cd $(TMPDIR)/$(PACKAGE)-$(VERSION);make DESTDIR=$(TMPDIR)/Simias.dst install
 
 simias-pkg:
-	/Developer/Applications/Utilities/PackageMaker.app/Contents/MacOS/PackageMaker -build -p $(PACKAGE_DIR)/Simias.pkg -f $(TMPDIR)/$(PACKAGE)-$(VERSION)/temp/Simias.dst/opt/novell/ifolder3 -r $(PACKAGE_DIR)/Install_Resources -i $(PACKAGE_DIR)/Info.plist -d $(PACKAGE_DIR)/Description.plist
+	./mkpkg -build -p $(PACKAGE_DIR)/Simias.pkg -f $(TMPDIR)/$(PACKAGE)-$(VERSION)/temp/Simias.dst/opt/novell/ifolder3 -r $(PACKAGE_DIR)/Install_Resources -i $(PACKAGE_DIR)/Info.plist -d $(PACKAGE_DIR)/Description.plist
 
 clean-local:
 	rm -rf *.pkg
