Updated to build using a script to get the correct results
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@5847 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/package/darwin/Makefile.am
+++ b/package/darwin/Makefile.am
@@ -39,7 +39,7 @@ simias-dist:
 	cd $(TMPDIR)/$(PACKAGE)-$(VERSION);make DESTDIR=$(TMPDIR)/Simias.dst install
 
 simias-pkg:
-	/Developer/Applications/Utilities/PackageMaker.app/Contents/MacOS/PackageMaker -build -p $(PACKAGE_DIR)/Simias.pkg -f $(TMPDIR)/$(PACKAGE)-$(VERSION)/temp/Simias.dst/opt/novell/ifolder3 -r $(PACKAGE_DIR)/Install_Resources -i $(PACKAGE_DIR)/Info.plist -d $(PACKAGE_DIR)/Description.plist
+	./mkpkg -build -p $(PACKAGE_DIR)/Simias.pkg -f $(TMPDIR)/$(PACKAGE)-$(VERSION)/temp/Simias.dst/opt/novell/ifolder3 -r $(PACKAGE_DIR)/Install_Resources -i $(PACKAGE_DIR)/Info.plist -d $(PACKAGE_DIR)/Description.plist
 
 clean-local:
 	rm -rf *.pkg
