Updated to build using a script to get the correct results
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@5848 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/package/darwin/Makefile.am
+++ b/package/darwin/Makefile.am
@@ -20,7 +20,7 @@
 #  Author: Calvin Gaisford <cgaisford@novell.com>
 #
 #######################################################################
-EXTRA_DIST = $(srcdir)/Makefile.am $(srcdir)/Description.plist $(srcdir)/Info.plist $(srcdir)/Install_Resources
+EXTRA_DIST = $(srcdir)/mkpkg $(srcdir)/Makefile.am $(srcdir)/Description.plist $(srcdir)/Info.plist $(srcdir)/Install_Resources
 
 PACKAGE_DIR = `pwd`
 TMPDIR = $(PACKAGE_DIR)/temp
