--- a/simias-server/configure.in
+++ b/simias-server/configure.in
@@ -171,7 +171,7 @@ case $SERVERD_OS in
         SEP='/'
         SHARED_LIB_EXT='.dylib'
         SHARED_LIB_FLAG='-shared'
-		StoreProviderAssembly="Simias.dll"
+		StoreProviderAssembly="SimiasLib.dll"
 		StoreProviderType="Simias.Storage.Provider.Flaim.FlaimProvider"
         STORELIB_PATH="../../external/sqlite/darwin"
         STORELIB="sqlite"
@@ -209,7 +209,7 @@ case $SERVERD_OS in
         SEP='/'
         SHARED_LIB_EXT='.so'
         SHARED_LIB_FLAG='-shared'
-		StoreProviderAssembly="Simias.dll"
+		StoreProviderAssembly="SimiasLib.dll"
 		StoreProviderType="Simias.Storage.Provider.Flaim.FlaimProvider"
         STORELIB_PATH="../../external/sqlite/linux"
         STORELIB="libsqlite.so"
@@ -292,7 +292,7 @@ case $SERVERD_OS in
         TLBX='tlbexp'
         TYPE_LIB_EXT='.tlb'
 		GSOAP_PATH="$TOOLDIR/gsoap/WIN32-2.7"
-		StoreProviderAssembly="Simias.dll"
+		StoreProviderAssembly="SimiasLib.dll"
 		StoreProviderType="Simias.Storage.Provider.Flaim.FlaimProvider"
         #
         # Set pkg-config variables
