--- a/simias-server/configure.in
+++ b/simias-server/configure.in
@@ -1,8 +1,8 @@
 AC_INIT(src/Service.cs)
 AC_CANONICAL_SYSTEM
-AM_CONFIG_HEADER(config.h)
+AM_INIT_AUTOMAKE(simias-server, 0.5)
+#AM_CONFIG_HEADER(config.h)
 
-AM_INIT_AUTOMAKE(simias-server, 0.3)
 VERSION=$VERSION.`date +%Y%m%d`
 AM_MAINTAINER_MODE
 AC_PROG_CC
