Fixed Bug#86688. The FileType filters are now cumulative. They have no exception policies. One change to the current iManager setup will be needed, which is, to only include files of a certain type, you must first exclude files of all types. Exceptions are checked first to see if they are allowed. Exclusions are checked second.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5876 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/test/Encryption/Encryption.csproj
+++ b/simias/test/Encryption/Encryption.csproj
@@ -7,7 +7,7 @@
     >
         <Build>
             <Settings
-                ApplicationIcon = "App.ico"
+                ApplicationIcon = ""
                 AssemblyKeyContainerName = ""
                 AssemblyName = "Encryption"
                 AssemblyOriginatorKeyFile = ""
@@ -85,23 +85,19 @@
                     HintPath = "..\..\tools\NUnit\net\bin\nunit.framework.dll"
                 />
                 <Reference
-                    Name = "Simias"
-                    AssemblyName = "Simias"
-                    HintPath = "..\..\stage\web\bin\SimiasLib.dll"
-                />
-                <Reference
                     Name = "nunit.core"
                     AssemblyName = "nunit.core"
                     HintPath = "..\..\tools\NUnit\net\bin\nunit.core.dll"
+                />
+                <Reference
+                    Name = "SimiasLib"
+                    AssemblyName = "SimiasLib"
+                    HintPath = "..\..\..\final\web\bin\SimiasLib.dll"
                 />
             </References>
         </Build>
         <Files>
             <Include>
-                <File
-                    RelPath = "App.ico"
-                    BuildAction = "Content"
-                />
                 <File
                     RelPath = "AssemblyInfo.cs"
                     SubType = "Code"
