--- a/simias/test/ChangeLog/ChangeLogTest.csproj
+++ b/simias/test/ChangeLog/ChangeLogTest.csproj
@@ -85,14 +85,14 @@
                     HintPath = "..\..\tools\NUnit\net\bin\nunit.framework.dll"
                 />
                 <Reference
-                    Name = "Simias"
-                    AssemblyName = "Simias"
-                    HintPath = "..\..\stage\web\bin\SimiasLib.dll"
-                />
-                <Reference
                     Name = "SimiasClient"
                     AssemblyName = "SimiasClient"
                     HintPath = "..\..\..\..\final\web\bin\SimiasClient.dll"
+                />
+                <Reference
+                    Name = "SimiasLib"
+                    AssemblyName = "SimiasLib"
+                    HintPath = "..\..\..\final\web\bin\SimiasLib.dll"
                 />
             </References>
         </Build>
