Updated to build against new flaim libraries
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@5893 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/configure.in
+++ b/configure.in
@@ -119,11 +119,13 @@ case $host_os in
         PKG_CHECK_MODULES(LOG4NET, log4net >= 1.2.9)
         AC_SUBST(LOG4NET_PREFIX)
         AC_SUBST(LOG4NET_LIBS)
+        PKG_CHECK_MODULES(LIBFLAIM, libflaim >= 1.2.9)
+        AC_SUBST(LOG4NET_PREFIX)
+        AC_SUBST(LOG4NET_LIBS)
     ;;
     darwin*)
 		# fix up the flaim libraries
-        ranlib external/flaim/macosx/release/libflm.a
-        ranlib external/flaim/macosx/release/libsmiflm.a
+        ranlib external/libflaim/OSX/libflaim.a
     ;;
 esac
 
